<resources>
    <string name="app_name">SyncIT</string>
    <string name="capture">capture</string>
    <string name="gallery">gallery</string>
    <string name="switch_camera">switch Camera</string>
    <string name="delete_button">delete button</string>
    <string name="share_button">Share button</string>
    <string name="back_button">back Button</string>
    <string name="Dir_Name">Scan Me Cache</string>
    <string name="no_files">No Files To Display</string>
    <string name="title_text_Home">Your PDFs Will Appear Here</string>
    <string name="check_button">check Button</string>
    <string name="log_out">Log Out</string>
    <string name="channel_name">Upload Images</string>
    <string name="channel_description">UpLoading Images ....</string>
    <string name="local_service_started">Upload Syncing Started</string>
    <string name="local_service_stopped">UpLoad Syncing Stopped</string>
    <string name="local_service_label">Syncing ...</string>
    <string name="file_explorer">File Explorer</string>
    <string name="cloud_download">cloud_Download</string>
</resources>