<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    android:layoutDirection="ltr">

    <androidx.viewpager.widget.ViewPager
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/photo_view_pager"/>
    <TextView
        android:id="@+id/no_files"
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_height="match_parent"
        android:textColor="@color/cardview_light_background"
        android:text="@string/no_files"/>
    <ImageButton
        android:id="@+id/back_button"
        android:contentDescription="@string/back_button"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="@dimen/margin_xsmall"
        android:layout_marginTop="@dimen/margin_small"
        android:layout_width="@dimen/round_button_small"
        android:layout_height="@dimen/round_button_small"
        android:background="@android:color/transparent"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_back" />
    <ImageButton
        android:id="@+id/check_button"
        android:contentDescription="@string/check_button"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="@dimen/margin_xsmall"
        android:layout_marginTop="@dimen/margin_small"
        android:layout_width="@dimen/round_button_small"
        android:layout_height="@dimen/round_button_small"
        android:background="@android:color/transparent"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_check" />

    <ImageButton
        android:id="@+id/share_button"
        android:contentDescription="@string/share_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginEnd="@dimen/margin_xlarge"
        android:layout_marginBottom="@dimen/margin_small"
        android:layout_width="@dimen/round_button_small"
        android:layout_height="@dimen/round_button_small"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_share"
        android:background="@android:color/transparent"
        />

    <ImageButton
        android:id="@+id/delete_button"
        android:contentDescription="@string/delete_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="@dimen/margin_xlarge"
        android:layout_marginBottom="@dimen/margin_small"
        android:layout_width="@dimen/round_button_small"
        android:layout_height="@dimen/round_button_small"
        android:scaleType="fitCenter"
        android:background="@android:color/transparent"
        android:src="@drawable/ic_delete" />



</androidx.constraintlayout.widget.ConstraintLayout>
